Text wrapping issues

--- a/src/style.css
+++ b/src/style.css
@@ -126,34 +126,34 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: var(--fontWeight-bold);
+  font-weight: var(--fontWeight-normal);
   color: var(--color-heading);
 }
 
 h1 {
-  font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-5);
+  font-weight: var(--fontWeight-normal);
+  font-size: var(--fontSize-6);
   color: var(--color-heading-black);
 }
 
 h2 {
-  font-size: var(--fontSize-4);
+  font-size: var(--fontSize-5);
 }
 
 h3 {
-  font-size: var(--fontSize-3);
+  font-size: var(--fontSize-4);
 }
 
 h4 {
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-3);
 }
 
 h5 {
-  font-size: var(--fontSize-1);
+  font-size: var(--fontSize-2);
 }
 
 h6 {
-  font-size: var(--fontSize-0);
+  font-size: var(--fontSize-1);
 }
 
 h1 > a {
@@ -529,6 +529,7 @@ textarea {
 .blog-post header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
+  min-width: fit-content;
 }
 
 .blog-post-nav ul {
